--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: inventory_on_mobile
-description: A new Flutter project.
+description: A Smart inventory app helping you to know what is within your inventory.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.2
+  flutter_staggered_grid_view: ^0.3.3
+  flutter_sparkline: ^0.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
