--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
+  http: ^0.13.0
   flutter_staggered_grid_view: ^0.3.3
+  cloud_firestore: ^1.0.4
+  firebase_core: ^1.0.3
+  firebase_auth: ^1.0.3
+  fluttertoast: ^7.0.1+1
+  google_sign_in: ^5.0.1
+  flutter_signin_button: ^2.0.0
+  rxdart: ^0.26.0
   flutter_sparkline: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,7 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-
+  assets:
+    - assets/LogoSI.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
